2009-04-28	Chris Johns <chrisj@rtems.org>

	* start/start.S: Update for boot_card command line change.

2009-03-05	Till Straumann <strauman@slac.stanford.edu>

	* include/bsp.h, start/start.S, startup/bspstart.c: 
	removed BSP_INIT_STACK_SIZE -- this BSP now also uses
	__stack defined by the linker script for the initial
	stack.
	Removed legacy code (inherited from old mvme2307 BSP
	but not relevant to this one) that tested trapping
	into PPCBug.

2009-03-05	Till Straumann <strauman@slac.stanford.edu>

	* startup/misc.c, flash/flashcfg.c, irq/irq_init.c,
	pci/detect_host_bridge.c: changed function arguments
	to silence compiler warnings.

2008-12-22	Ralf Corsépius <ralf.corsepius@rtems.org>

	* i2c/i2c_init.c: Include <errno.h> instead of <sys/errno.h>.

2008-12-07	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove -Qy from *link.

2008-12-05	Ralf Corsépius <ralf.corsepius@rtems.org>

	* bsp_specs: Remove motld_start_g.o.

2008-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* bsp_specs: Move -e start from *link to *startfile to avoid warning
	for undefined entry symbol when linking relocatables with binutils
	2.19.

2008-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Remove build_date.c.
	* startup/bspstart.c: Remove BSP_build_date.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Eliminate *_SOURCES.

2008-09-29	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Move noinst_LIBRARIES = libbsp.a before its
	components.

2008-09-26	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am: Cleanup ../../shared/include/bootcard.h handling.

2008-09-24	Ralf Corsépius <ralf.corsepius@rtems.org>

	PR 1322/bsps
	* include/bspopts.h.in: Remove.

2008-09-23	Joel Sherrill <joel.sherrill@oarcorp.com>

	* configure.ac, include/bspopts.h.in: Make letting boot_card() handle
	work area allocation mandatory. Rename
	RTEMS_BSP_BOOTCARD_HANDLES_RAM_ALLOCATION to BSP_BOOTCARD_OPTIONS.
